@@ -17,3 +17,4 @@ JSON data source
   implemented by https://github.com/dmnpignaud
 jar file now runnable
 Added --no-comparators option to genetic algorithm
+Added --original=N option to genetic algorithm
